--- a/Wave/Wave.vcxproj
+++ b/Wave/Wave.vcxproj
@@ -23,6 +23,7 @@
     <ClCompile Include="InputHandler.cpp" />
     <ClCompile Include="MenuParticleEntity.cpp" />
     <ClCompile Include="MenuRenderer.cpp" />
+    <ClCompile Include="PlayerEntity.cpp" />
     <ClCompile Include="Start.cpp" />
     <ClCompile Include="TrailEntity.cpp" />
     <ClCompile Include="Wave.cpp" />
@@ -33,6 +34,7 @@
     <ClInclude Include="InputHandler.h" />
     <ClInclude Include="MenuParticleEntity.h" />
     <ClInclude Include="MenuRenderer.h" />
+    <ClInclude Include="PlayerEntity.h" />
     <ClInclude Include="resource.h" />
     <ClInclude Include="resource1.h" />
     <ClInclude Include="STATE.h" />
