--- a/Wave/Wave.vcxproj.filters
+++ b/Wave/Wave.vcxproj.filters
@@ -69,6 +69,9 @@
     <ClCompile Include="HUD.cpp">
       <Filter>Source Files\Rendering</Filter>
     </ClCompile>
+    <ClCompile Include="BasicEnemy.cpp">
+      <Filter>Source Files\Entity\Entities</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Wave.h">
@@ -109,6 +112,9 @@
     </ClInclude>
     <ClInclude Include="Timer.hpp">
       <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="BasicEnemy.h">
+      <Filter>Header Files\Entity\Entities</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
