--- a/Wave/Wave.vcxproj.filters
+++ b/Wave/Wave.vcxproj.filters
@@ -72,6 +72,9 @@
     <ClCompile Include="BasicEnemy.cpp">
       <Filter>Source Files\Entity\Entities</Filter>
     </ClCompile>
+    <ClCompile Include="FastEnemy.cpp">
+      <Filter>Source Files\Entity\Entities</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Wave.h">
@@ -114,6 +117,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="BasicEnemy.h">
+      <Filter>Header Files\Entity\Entities</Filter>
+    </ClInclude>
+    <ClInclude Include="FastEnemy.h">
       <Filter>Header Files\Entity\Entities</Filter>
     </ClInclude>
   </ItemGroup>
