Added functional sound handler and added menu music

--- a/Wave/Wave.vcxproj
+++ b/Wave/Wave.vcxproj
@@ -31,6 +31,7 @@
     <ClCompile Include="MenuRenderer.cpp" />
     <ClCompile Include="PlayerEntity.cpp" />
     <ClCompile Include="Slider.cpp" />
+    <ClCompile Include="SoundHandler.cpp" />
     <ClCompile Include="Start.cpp" />
     <ClCompile Include="TrailEntity.cpp" />
     <ClCompile Include="Wave.cpp" />
@@ -51,6 +52,7 @@
     <ClInclude Include="resource.h" />
     <ClInclude Include="resource1.h" />
     <ClInclude Include="Slider.h" />
+    <ClInclude Include="SoundHandler.h" />
     <ClInclude Include="STATE.h" />
     <ClInclude Include="Timer.hpp" />
     <ClInclude Include="TrailEntity.h" />
