--- a/Wave/Wave.vcxproj.filters
+++ b/Wave/Wave.vcxproj.filters
@@ -16,23 +16,14 @@
     <Filter Include="Header Files\Rendering">
       <UniqueIdentifier>{99ad2048-c02b-47cf-b9cb-9a7beb6a4872}</UniqueIdentifier>
     </Filter>
-    <Filter Include="Header Files\Input">
-      <UniqueIdentifier>{d05d2079-7891-49ca-b3f9-03546bb381fe}</UniqueIdentifier>
-    </Filter>
     <Filter Include="Source Files\Rendering">
       <UniqueIdentifier>{9790d44e-26d1-4157-af6c-e83609b9f04e}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="Source Files\Input">
-      <UniqueIdentifier>{6d621ddb-ad66-468c-b830-7aba6c3e4d6d}</UniqueIdentifier>
     </Filter>
     <Filter Include="Source Files\Entity">
       <UniqueIdentifier>{da021d28-ed11-4563-8e09-380988d5900f}</UniqueIdentifier>
     </Filter>
     <Filter Include="Header Files\Entity">
       <UniqueIdentifier>{ec360a82-4304-4663-84e4-e685e495540a}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="Header Files\Resources">
-      <UniqueIdentifier>{3216f640-e8ec-4d65-b42b-9dc397bb6afc}</UniqueIdentifier>
     </Filter>
     <Filter Include="Header Files\Entity\Entities">
       <UniqueIdentifier>{f486f35b-8997-4664-bc11-9d97d2d464d9}</UniqueIdentifier>
@@ -46,6 +37,15 @@
     <Filter Include="Header Files\GUI">
       <UniqueIdentifier>{80991a33-9624-4b42-8983-a4aa0fbece1f}</UniqueIdentifier>
     </Filter>
+    <Filter Include="Resource Files\Resources">
+      <UniqueIdentifier>{3216f640-e8ec-4d65-b42b-9dc397bb6afc}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Source Files\Handling">
+      <UniqueIdentifier>{6d621ddb-ad66-468c-b830-7aba6c3e4d6d}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Header Files\Handling">
+      <UniqueIdentifier>{d05d2079-7891-49ca-b3f9-03546bb381fe}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Start.cpp">
@@ -58,7 +58,7 @@
       <Filter>Source Files\Rendering</Filter>
     </ClCompile>
     <ClCompile Include="InputHandler.cpp">
-      <Filter>Source Files\Input</Filter>
+      <Filter>Source Files\Handling</Filter>
     </ClCompile>
     <ClCompile Include="EntityHandler.cpp">
       <Filter>Source Files\Entity</Filter>
@@ -93,6 +93,9 @@
     <ClCompile Include="Arrow.cpp">
       <Filter>Source Files\GUI</Filter>
     </ClCompile>
+    <ClCompile Include="SoundHandler.cpp">
+      <Filter>Source Files\Handling</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Wave.h">
@@ -105,16 +108,16 @@
       <Filter>Header Files\Rendering</Filter>
     </ClInclude>
     <ClInclude Include="InputHandler.h">
-      <Filter>Header Files\Input</Filter>
+      <Filter>Header Files\Handling</Filter>
     </ClInclude>
     <ClInclude Include="EntityHandler.h">
       <Filter>Header Files\Entity</Filter>
     </ClInclude>
     <ClInclude Include="resource.h">
-      <Filter>Header Files\Resources</Filter>
+      <Filter>Resource Files\Resources</Filter>
     </ClInclude>
     <ClInclude Include="resource1.h">
-      <Filter>Header Files\Resources</Filter>
+      <Filter>Resource Files\Resources</Filter>
     </ClInclude>
     <ClInclude Include="MenuParticleEntity.h">
       <Filter>Header Files\Entity\Entities</Filter>
@@ -151,6 +154,9 @@
     </ClInclude>
     <ClInclude Include="Arrow.h">
       <Filter>Header Files\GUI</Filter>
+    </ClInclude>
+    <ClInclude Include="SoundHandler.h">
+      <Filter>Header Files\Handling</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
