--- a/Wave/Wave.vcxproj.filters
+++ b/Wave/Wave.vcxproj.filters
@@ -96,6 +96,9 @@
     <ClCompile Include="SoundHandler.cpp">
       <Filter>Source Files\Handling</Filter>
     </ClCompile>
+    <ClCompile Include="SmartEnemy.cpp">
+      <Filter>Source Files\Entity\Entities</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Wave.h">
@@ -157,6 +160,9 @@
     </ClInclude>
     <ClInclude Include="SoundHandler.h">
       <Filter>Header Files\Handling</Filter>
+    </ClInclude>
+    <ClInclude Include="SmartEnemy.h">
+      <Filter>Header Files\Entity\Entities</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
